--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,21 @@
     <title>Messenger | Main</title>
 </head>
 <body>
-    <a href="/pages/auth/index.html">Auth</a>
-    <a href="/pages/error/index.html">Errors</a>
-    <a href="/pages/profile/index.html">Profile</a>
-    <a href="/pages/chat/index.html">Chat</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="/pages/auth/index.html">Auth</a>
+            </li>
+            <li>
+                <a href="/pages/error/index.html">Errors</a>
+            </li>
+            <li>
+                <a href="/pages/profile/index.html">Profile</a>
+            </li>
+            <li>
+                <a href="/pages/chat/index.html">Chat</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
