--- a/src/pages/profile/index.html
+++ b/src/pages/profile/index.html
@@ -10,8 +10,18 @@
     <title>Messenger | Profile</title>
 </head>
 <body>
-    <a href="./modules/viewProfile/index.html">View Profile</a>
-    <a href="./modules/editDataProfile/index.html">Edit Data Profile</a>
-    <a href="./modules/editPasswordProfile/index.html">Edit Password Profile</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="./modules/viewProfile/index.html">View Profile</a>
+            </li>
+            <li>
+                <a href="./modules/editDataProfile/index.html">Edit Data Profile</a>
+            </li>
+            <li>
+                <a href="./modules/editPasswordProfile/index.html">Edit Password Profile</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
