--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -13,7 +13,15 @@
     <title>Messenger | Auth</title>
 </head>
 <body>
-    <a href="/pages/auth/modules/login/index.html">Log In</a>
-    <a href="/pages/auth/modules/signup/index.html">Sign Up</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="/pages/auth/modules/login/index.html">Log In</a>
+            </li>
+            <li>
+                <a href="/pages/auth/modules/signup/index.html">Sign Up</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
