--- a/src/pages/error/index.html
+++ b/src/pages/error/index.html
@@ -8,7 +8,15 @@
     <title>Messenger | Errors</title>
 </head>
 <body>
-    <a href="./modules/404/index.html">404</a>
-    <a href="./modules/500/index.html">500</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="./modules/404/index.html">404</a>
+            </li>
+            <li>
+                <a href="./modules/500/index.html">500</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
