--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self';
+        script-src 'self' 'unsafe-eval';
+        connect-src 'self' https: wss: ya-praktikum.tech;
+        style-src 'self' 'unsafe-inline' *.googleapis.com;
+        font-src 'self' *.gstatic.com data:;
+        img-src 'self' https://ya-praktikum.tech data:;
+        " />
+
     <link rel="stylesheet" href="/utils/styles/style.scss">
 
     <title>Messenger</title>
